--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -7,6 +7,39 @@
     android:background="@color/yellow"
     tools:context=".LearnFragment">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/back"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="@color/purple_500"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="12.5dp"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="@color/dark_blue"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="12.5dp"
+        app:layout_constraintRight_toRightOf="parent" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:text="Back"
+            android:layout_gravity="center"
+            android:textStyle="bold"/>
+
+    </androidx.cardview.widget.CardView>
+
     <LinearLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
@@ -23,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:text="Task: 1/10"
+            android:text="Task: 1"
             android:textColor="@color/dark_blue"
             android:textSize="25sp"
             android:textStyle="bold" />
@@ -31,33 +64,35 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="7dp"
         android:background="#9A6C673E"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        android:orientation="horizontal" />
 
     <TextView
         android:id="@+id/txt_warning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:textColor="@color/white"
         android:text="This only works on numbers up to 9"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/card_main"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/example"
         android:layout_width="match_parent"
-        android:visibility="invisible"
         android:layout_height="150dp"
         android:layout_margin="20dp"
-        app:cardCornerRadius="30dp"
         android:backgroundTint="@color/yellow"
+        android:visibility="invisible"
+        app:cardCornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/card_main"
         app:layout_constraintTop_toTopOf="parent">
@@ -73,75 +108,84 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/carrot1"
-                android:padding="10dp"                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/carrot_1"/>
+                <ImageView
+                    android:id="@+id/carrot1"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:padding="10dp"
+                    android:src="@drawable/carrot_1" />
 
-            <ImageView
-                android:id="@+id/carrot2"
-                android:padding="10dp"                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/carrot_2"/>
+                <ImageView
+                    android:id="@+id/carrot2"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:padding="10dp"
+                    android:src="@drawable/carrot_2" />
 
-            <ImageView
-                android:id="@+id/carrot3"
-                android:padding="10dp"                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/carrot_3"/>
+                <ImageView
+                    android:id="@+id/carrot3"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:padding="10dp"
+                    android:src="@drawable/carrot_3" />
 
-            <ImageView
-                android:id="@+id/carrot4"
-                android:padding="10dp"                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/carrot_4"/>
+                <ImageView
+                    android:id="@+id/carrot4"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:padding="10dp"
+                    android:src="@drawable/carrot_4" />
 
-            <ImageView
-                android:id="@+id/carrot5"
-                android:padding="10dp"                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/carrot_5"/>
+                <ImageView
+                    android:id="@+id/carrot5"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:padding="10dp"
+                    android:src="@drawable/carrot_5" />
 
             </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/carrot6"
-                android:padding="10dp"                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/carrot_6"/>
+                <ImageView
+                    android:id="@+id/carrot6"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:padding="10dp"
+                    android:src="@drawable/carrot_6" />
 
-            <ImageView
-                android:id="@+id/carrot7"
-                android:padding="10dp"                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/carrot_7"/>
+                <ImageView
+                    android:id="@+id/carrot7"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:padding="10dp"
+                    android:src="@drawable/carrot_7" />
 
-            <ImageView
-                android:id="@+id/carrot8"
-                android:padding="10dp"                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/carrot_8"/>
+                <ImageView
+                    android:id="@+id/carrot8"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:padding="10dp"
+                    android:src="@drawable/carrot_8" />
 
-            <ImageView
-                android:id="@+id/carrot9"
-                android:padding="10dp"                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/carrot_9"/>
+                <ImageView
+                    android:id="@+id/carrot9"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:padding="10dp"
+                    android:src="@drawable/carrot_9" />
 
-            <ImageView
-                android:id="@+id/carrot10"
-                android:padding="10dp"
-                android:layout_width="70dp"
-                android:layout_height="70dp" />
+                <ImageView
+                    android:id="@+id/carrot10"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:padding="10dp" />
 
-        </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -151,20 +195,20 @@
     <androidx.cardview.widget.CardView
         android:layout_width="130dp"
         android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/example"
+        app:cardCornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/card_main"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:cardCornerRadius="30dp">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/example">
 
-    <TextView
-        android:id="@+id/number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="55 * 55"
-        android:layout_gravity="center"
-        android:textColor="@color/dark_blue"
-        android:textSize="35sp" />
+        <TextView
+            android:id="@+id/number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="55 * 55"
+            android:textColor="@color/dark_blue"
+            android:textSize="35sp" />
 
     </androidx.cardview.widget.CardView>
 
@@ -200,7 +244,6 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/dark_blue"
                     app:cardCornerRadius="30dp">
 
                     <TextView
@@ -223,7 +266,6 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/dark_blue"
                     app:cardCornerRadius="30dp">
 
                     <TextView
@@ -258,7 +300,6 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/dark_blue"
                     app:cardCornerRadius="30dp">
 
                     <TextView
@@ -277,12 +318,11 @@
                     android:id="@+id/card4"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/dark_blue"
                     app:cardCornerRadius="30dp">
 
                     <TextView
